@@ -2474,6 +2474,7 @@ Christoph Haubrich <christoph1.haubrich@arcor.de>
  tag of the 'info' file
  for adding a workaround in detecting frame height for channels with wrong crop parameters
  for reporting duplicate component entries in the info of an ongoing recording
+ for reporting a problem where the info file of an ongoing recording was not re-read
 
 Pekka Mauno <pekka.mauno@iki.fi>
  for fixing cSchedule::GetFollowingEvent() in case there is currently no present
